[package]
name = "bevy_mod_yarn"
description = "A bevy Yarn Spinner runtime"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
csv = "1"
prost = "0.12"
regex = "1.9.6"

chapter = "0.1.0"

[features]
default = ["input-handlers"]

# Adds default input handlers
input-handlers = []